fix code block overflow on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -265,6 +265,7 @@ pre {
 	color: #657b83;
 	padding: 0.5em;
 	line-height: 135%;
+	overflow: auto;
 }
 
 :not(pre) > code {
