--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -9,4 +9,8 @@
 		color: #222;
 		background-color: #eee;
 	}
+
+	pre {
+		max-width: 85vw;
+	}
 }
